--- a/OllamaFunctionCalling/OllamaFunctionCalling.csproj
+++ b/OllamaFunctionCalling/OllamaFunctionCalling.csproj
@@ -21,4 +21,8 @@
       <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.1" />
       <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.1" />
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\ExampleData\ExampleData.csproj" />
+    </ItemGroup>
 </Project>
